[project]
requires-python = ">=3.10"
dependencies = [
  # --- core stack, frozen on the pydantic-v1 line -----------------
  "pydantic==1.10.13",
  "pydantic-settings>=2.1.0",         # needed by newer libs
  "langchain-core==0.2.28",
  "langchain==0.1.30",
  "langchain-openai==0.3.26",
  "langchain-community==0.0.27",
  "langgraph==0.0.43",

  # optional LLM wrappers that TradingAgents imports
  "langchain-anthropic>=0.3.17",
  "langchain-google-genai>=2.1.6",

  # everything that was already in setup.py / requirements.txt
  "akshare>=1.17.18",
  "backtrader>=1.9.78.123",
  "chainlit>=2.6.0",
  "chromadb==0.4.24",                 # last version still on pydantic-v1
  "eodhd>=1.0.32",
  "feedparser>=6.0.11",
  "finnhub-python>=2.4.24",
  "pandas>=2.3.1",
  "parsel>=1.10.0",
  "praw>=7.8.1",
  "pytz>=2025.2",
  "questionary>=2.1.0",
  "redis>=6.2.0",
  "requests>=2.32.4",
  "rich>=14.0.0",
  "setuptools>=78.1.1",
  "stockstats>=0.6.5",
  "tqdm>=4.67.1",
  "tushare>=1.4.21",
  "typing-extensions>=4.14.1",
  "yfinance>=0.2.65",
]