[project]
name = "tradingagents"
version = "0.1.0"
description = "TradingAgents – reproducible Windows build (pydantic‑v1 line)"
requires-python = ">=3.10"

dependencies = [
    # core stack
    "pydantic==1.10.13",
    "pydantic-settings>=0.2.3,<2",
    "langchain-core==0.2.28",
    "langchain==0.1.30",
    "langchain-openai==0.3.26",
    "langchain-community==0.0.27",
    "langgraph==0.0.43",

    # optional LLM wrappers
    "langchain-anthropic>=0.3.17,<0.4",
    "langchain-google-genai>=2.1.6,<3",

    # vector DB
    "chromadb==0.4.24",

    # main deps
    "akshare>=1.17.18,<2",
    "backtrader>=1.9.78.123,<2",
    "chainlit>=2.6.0,<3",
    "eodhd>=1.0.32,<2",
    "feedparser>=6.0.11,<7",
    "finnhub-python>=2.4.24,<3",
    "pandas>=2.3.1,<3",
    "parsel>=1.10.0,<2",
    "praw>=7.8.1,<8",
    "pytz>=2025.2,<2026",
    "questionary>=2.1.0,<3",
    "redis>=6.2.0,<7",
    "requests>=2.32.4,<3",
    "rich>=14.0.0,<15",
    "setuptools>=78,<82",
    "stockstats>=0.6.5,<1",
    "tqdm>=4.67.1,<5",
    "tushare>=1.4.21,<2",
    "typing-extensions>=4.14.1,<5",
    "urllib3>=2.5.0,<3",
    "yfinance>=0.2.65,<1",

    # helper libs
    "tenacity>=8.5.0,<9",
    "tiktoken>=0.9.0,<0.10",
    "jsonpatch>=1.33,<2",
    "jsonpointer>=3.0.0,<4",
    "PyYAML>=6,<7",
    "langsmith>=0.1.147,<0.2",
]

[project.scripts]
tradingagents = "cli.main:app"
